--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,31 @@ next-env.d.ts
 # firebase
 firebase-debug.log
 firestore-debug.log
+
+# API Keys and Environment
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env*.local
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
